# eda-lite

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  application-environment.yml  env_example  pyproject.toml  run.sh
certs/: README.md
playbooks/: hello_world.yml
rulebooks/: hello_world.yml
src/ifthisthenthat_eda/: app.py  auth.py  config.py
src/ifthisthenthat_eda/content/actions/: community.general.slack.json
src/ifthisthenthat_eda/content/conditions/ansible.eda.range/: after_i.json  first.json  second.json  third.json
src/ifthisthenthat_eda/content/conditions/ansible_eda_range/: before_i.json  equal_i.json
src/ifthisthenthat_eda/content/sources/: ansible.eda.range.json
tools/: decode_jwt.py  encode_jwt.py
