[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 79
target-version = ["py38", "py39", "py310"]
extend-exclude = "docs"

[tool.isort]
profile = "black"
combine_as_imports = true
line_length = 79

[tool.pytest.ini_options]
asyncio_mode = "auto"

[project]
name = "eda-ifthisthenthat"
version = "0.0.1"
dependencies = [
    "fastapi[all]",
    "python-multipart",
    "python-jose[cryptography]",
    "passlib",
    "bcrypt"
]
